--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "apptodos_tsc_react",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "",
+	"homepage": "https://stevencar2004.github.io/App-Todos_TSC-REACT/",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
